<resources>
    <string name="john_smith" translatable="false">John Smith</string>
    <string name="play_url" translatable="false">https://play.google.com/store/apps/details?id=%s</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="ready" translatable="false">✓</string>

    <string name="grant_permission_bar">Micro learning mode requires a drawing over other apps permission. Tap here to grant it.</string>
    <string name="grant_permission_dialog">Micro learning mode requires a drawing over other apps permission. Without permission, only traditional learning will be available.\n\nPlease tap OK now and then permit drawing over other apps on next screen.</string>
    <string name="grant_battery_bar">Android system\'s Doze Mode may disable Micro Learning popup when device unlocks. Tap here to fix.</string>
    <string name="grant_battery_dialog">Android has a special Doze Mode, made to save battery power, but it may close background applications and disable Micro Learning mode when this device unlocks.\n\nThis application is very well-optimized, energy consumption is close to zero and will no consume battery when running in background.\n\nPlease allow this app to be run in background at the next system prompt.</string>
    <string name="understood">Understood</string>
    <string name="camera">Camera</string>
    <string name="not_now">⨯ Close</string>
    <string name="shadowing_hint">The answer options are hidden to make your memory work harder.\n\n\n\nTAP TO SHOW OPTIONS.</string>
    <string name="swipe_to_dismiss">SWIPE TO DISMISS</string>
    <string name="no_idea">NO IDEA</string>
    <string name="im_fine">I\'M FINE</string>

    <string name="disable_for">Disable for</string>
    <string name="_1h">1h</string>
    <string name="_2h">2h</string>
    <string name="_4h">4h</string>

    <string name="unopened">Unopened</string>
    <string name="finished">Finished</string>
    <string name="progress_explanation">"%2$d%% well-known\nand\n%1$d%% familiar"</string>
    <string name="set_lesson_progress_explanation">"In this lesson\n%1$d studying\n%2$d familiar\n%3$d known"</string>

    <string name="practice">Practice</string>

    <string name="unknown">Unknown</string>
    <string name="studying">Studying</string>
    <string name="familiar">Familiar</string>
    <string name="learned">Learned</string>
    <string name="learned_well">Remembered</string>

    <string name="boastful_description">The best choice for unobtrusive and inevitable learning</string>

    <string name="sign_in">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="share_my_progress">Share my progress</string>

    <string name="preferences">Preferences</string>
    <string name="general">General</string>
    <string name="appearance">Appearance and behaviour</string>

    <string name="enable_hide_variants">Hide answer options</string>
    <string name="enable_hide_variants_summary">Answer options will be hidden until you are ready to get answer</string>
    <string name="enable_on_screen_unlock">Enable on screen unlock</string>
    <string name="enable_on_screen_unlock_summary">You can disable the appearance of a training screen when the device is unlocked</string>
</resources>
