<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_floating"
    android:clickable="true"
    android:focusable="true">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout style="?android:attr/buttonBarStyle"
        android:id="@+id/quickButtonBar"
        android:orientation="horizontal"
        android:layout_margin="@dimen/half_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_toStartOf="@android:id/closeButton"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView style="?android:attr/buttonBarButtonStyle"
                android:text="@string/disable_for"
                android:ellipsize="start"
                android:textColor="@color/color_white_66"
                android:padding="0dp"
                android:layout_width="wrap_content"
                android:layout_height="48dp" />
            <Button style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/disableFor1h"
                android:tag="1"
                android:text="@string/_1h"
                android:hapticFeedbackEnabled="true"
                android:tint="?attr/colorAccent"
                android:layout_width="42dp"
                android:layout_height="48dp" />
            <Button style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/disableFor2h"
                android:tag="2"
                android:text="@string/_2h"
                android:hapticFeedbackEnabled="true"
                android:tint="?attr/colorAccent"
                android:layout_width="42dp"
                android:layout_height="48dp" />
            <Button style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/disableFor4h"
                android:tag="4"
                android:text="@string/_4h"
                android:hapticFeedbackEnabled="true"
                android:tint="?attr/colorAccent"
                android:layout_width="42dp"
                android:layout_height="48dp" />
        </LinearLayout>
        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@android:id/closeButton"
            android:text="@string/not_now"
            android:hapticFeedbackEnabled="true"
            android:tint="?attr/colorAccent"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />
    </RelativeLayout>
</LinearLayout>

